# spsc

./: Cargo.toml  clippy.toml
benches/: throughput.rs
src/: atomic_waker.rs  consumer.rs  inner.rs  lib.rs  producer.rs  sync.rs
tests/: shuttle.rs  spsc.rs
