[workspace]

[package]
name = "spsc"
version = "0.1.0"
edition = "2021"
description = "Fixed-capacity async SPSC ringbuffer with bulk handles"
license = "MIT OR Apache-2.0"

[dependencies]
shuttle = { version = "0.7", optional = true }
thiserror = "2"

[features]
# Enable to swap in `shuttle::sync` atomics + `Arc` and run randomized
# concurrency exploration via the tests in `tests/shuttle.rs`. Build with
# `cargo test --features shuttle-test`. Cannot be combined with the
# normal test suite — shuttle atomics panic outside `shuttle::check_*`.
shuttle-test = ["dep:shuttle"]

[dev-dependencies]
criterion = "0.5"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }

[[bench]]
name = "throughput"
harness = false

# Release build with debug info + frame pointers for perf profiling.
[profile.release]
debug = "line-tables-only"
# `force-frame-pointers = true` would be ideal but is unstable; instead set
# RUSTFLAGS="-C force-frame-pointers=yes" before building when running perf.
